Made some ui changes to prevent text wrapping

--- a/uctMaths/competition/static/style.css
+++ b/uctMaths/competition/static/style.css
@@ -93,7 +93,7 @@ body {
 #sidebar
 	{
 		float: left;
-		width: 120px;
+		width: 180px;
 		margin-left: 20px;
 		padding-left: 1%;
 		height: 50em;
